DevOps/CI/manifest-main/sonarqube/postgres-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-sonar
  namespace: kube-ops
  labels:
    app: postgres-sonar
spec:
  clusterIP: None
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres-sonar
