DevOps/CI/manifest-main/sonarqube/sonar-ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: kube-ops
spec:
  ingressClassName: nginx
  rules:
  - host: sonar.itsky.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 9000
